--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <body>
     <!-- Шапка -->
-    <header>
-        <div class="container">
+    <header class="page-header">
+        <div class="container container-header">
             <div class="mein-nav">
                 <nav>
                     <a href="./index.html" class="logo">Web <span class="logo header">Studio</span></a>
@@ -436,5 +436,13 @@
             </div>            
         </div>
     </footer>
+
+    <script>
+        const { height: pageHeaderHeight } = document
+            .querySelector(".page-header")
+            .getBoundingClientRect();
+        document.body.style.paddingTop = `${pageHeaderHeight}px`;
+    </script>
+
 </body>
 </html>
