Добавляет позиционирование элиментов на странице Студия

--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="work list">
-                    <li class="item">
+                    <li class="item work-examples">                        
                         <h3 class="title">ДУСКТОПНЫЕ ПРИЛОЖЕНИЯ</h3>
                         <img src="./images/box-1.jpg" alt="Руки человека работающие на ноутбуке, который лежит на столе" width="370">
                     </li>
 
-                    <li class="item">
+                    <li class="item work-examples">
                         <h3 class="title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</h3>
                         <img src="./images/box-2.jpg" alt="Смартфон на бело-синем фоне" width="370">
                     </li>
 
-                    <li class="item">
+                    <li class="item work-examples">
                         <h3 class="title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</h3>
                         <img src="./images/box-3.jpg" alt="Монитор с изображение" width="370">
                     </li>
